# StrategyForge

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run.py  strategy-forge-backend.spec
.github/workflows/: release.yml
apps/strategy-forge/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/strategy-forge/src-tauri/: Cargo.toml  tauri.conf.json
apps/strategy-forge/src-tauri/nsis/: uninstall_hook.nsh
apps/strategy-forge/src-tauri/src/: main.rs
data/custom_dict/: classic_names.txt
data/rule/: domain_prompts.json  (+1 more)
scripts/: test_algorithms_lmstudio.py  test_all_domains_fsm_lmstudio.py  test_architecture_lmstudio.py  test_bugfix_e2e.py  test_causal_propagation_lmstudio.py  test_conditional_delay_auto_lmstudio.py  test_connection_fault_offline.py  test_context_stress_lmstudio.py  test_dedup_fix.py  test_depth_e2e.py  test_detect_domain_offline.py  test_engine_config.py  test_entity_report_fix_lmstudio.py  test_entity_resolution_lmstudio.py  test_event_fts_lmstudio.py  test_extract_json_offline.py  test_final_e2e.py  test_fsm_config_lmstudio.py  test_geo_intel_lmstudio.py  test_geo_strategy.py  test_geo_tuning_lmstudio.py  test_graph_fulllink_lmstudio.py  test_graph_perf_lmstudio.py  test_intel_safety_net_offline.py  test_intel_sorting_lmstudio.py  test_lancedb_fulllink_lmstudio.py  test_lancedb_table_reuse_offline.py  test_leader_merge_lmstudio.py  test_llm_entity.py  test_llm_retry_offline.py  test_multi_action_lmstudio.py  test_narrative_e2e.py  test_narrative_report_lmstudio.py  test_ode_biz_e2e.py  test_ode_n37_lmstudio.py  test_optimizer_e2e.py  test_optimizer_lmstudio.py  test_optimizer_report_lmstudio.py  test_pause_resume_lmstudio.py  test_perf_fixes_lmstudio.py  (+16 more)
tests/: test_algorithms.py  test_compile_check.py  test_e2e_20k.py  test_e2e_server.py  test_four_modules.py  test_full_pipeline.py  test_graph_format_fix.py  test_graph_race.py  test_intel_sorter_safety_net.py  test_long_text_e2e.py  test_ode_module.py  test_pipeline_fast.py
(+44 files in other folders)
