[package]
name = "strategy-forge"
version = "0.1.0"
description = "StrategyForge — 战略决策推演工具"
edition = "2021"

[package.metadata]
authors = ["StrategyForge"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
